package NOVA_UI;

message UiRequest {
required string url = 1;
required int32 type = 2;

}

